# LedgeLite

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: transaction.hxx
src/: main.cxx  transaction.cxx
